--- a/Futurama/app/src/main/res/layout/fragment_notifications.xml
+++ b/Futurama/app/src/main/res/layout/fragment_notifications.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1e1e1e"
     tools:context=".ui.notifications.NotificationsFragment">
 
     <TextView
@@ -15,10 +16,28 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.011" />
+
+
+    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_notifications"
+        app:loader_animDur="100"
+        app:loader_bigCircleRadius="60dp"
+        app:loader_circleRadius="14dp"
+        app:loader_defaultColor="#BEBEBE"
+        app:loader_firstShadowColor="#BEBEBE"
+        app:loader_secondShadowColor="#BEBEBE"
+        app:loader_selectedColor="@color/white"
+        app:loader_showRunningShadow="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
