--- a/Futurama/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/Futurama/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -11,8 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="#1e1e1e"
         app:itemRippleColor="#9AFBDE"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
