--- a/Futurama/app/src/main/res/layout/fragment_notifications.xml
+++ b/Futurama/app/src/main/res/layout/fragment_notifications.xml
@@ -4,40 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1e1e1e"
+    android:background="@color/black"
     tools:context=".ui.notifications.NotificationsFragment">
+
+
+    <ImageView
+        android:id="@+id/img_title"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/futurama_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/text_notifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textSize="20sp"
         android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.011" />
+        app:layout_constraintTop_toBottomOf="@+id/image_logout"
+        app:layout_constraintVertical_bias="0.075" />
 
-
-    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/image_logout"
+        android:layout_width="158dp"
+        android:layout_height="182dp"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/logout_icon"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_notifications"
-        app:loader_animDur="100"
-        app:loader_bigCircleRadius="60dp"
-        app:loader_circleRadius="14dp"
-        app:loader_defaultColor="#BEBEBE"
-        app:loader_firstShadowColor="#BEBEBE"
-        app:loader_secondShadowColor="#BEBEBE"
-        app:loader_selectedColor="@color/white"
-        app:loader_showRunningShadow="true" />
+        app:layout_constraintTop_toBottomOf="@+id/img_title" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
