--- a/Futurama/app/src/main/res/layout/fragment_home.xml
+++ b/Futurama/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <SearchView
+            <!--SearchView
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -38,7 +38,24 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_title" />
+                app:layout_constraintTop_toBottomOf="@+id/img_title" /-->
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:background="@color/white"
+                android:hint="Insert character name"
+                android:label="@string/app_name"
+                android:queryHint="@android:string/search_go"
+                app:defaultQueryHint="Name character"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_title"
+                tools:ignore="MissingConstraints">
+
+            </androidx.appcompat.widget.SearchView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_characters"
